# Point-Cloud-Segmentation-and-Classification

./: .gitignore  CMakeLists.txt  README.md  evaluate.py  helper_project.py  max_min_coord.cpp  off2numpy.py  train.py
data/car_person/: shape_names.txt  test.h5  test_files.txt  test_rotated_180.h5  test_rotated_90.h5  train_files.txt
data/log_3-1-19_96%/: model.ckpt.index
data/log_3-1-19_96%/train/: events.out.tfevents.1545940581.LAPTOP-8RIB354M  events.out.tfevents.1546291547.LAPTOP-8RIB354M  events.out.tfevents.1546291575.LAPTOP-8RIB354M  events.out.tfevents.1546474467.LAPTOP-8RIB354M  events.out.tfevents.1546476695.LAPTOP-8RIB354M
don_segmentation/: don_segmentation.cpp
log_3-1-19_96%/: log_train.txt  pointnet_cls_basic.py  train.py
log_3-1-19_96%/train/: events.out.tfevents.1546291442.LAPTOP-8RIB354M  events.out.tfevents.1546291682.LAPTOP-8RIB354M  events.out.tfevents.1546473447.LAPTOP-8RIB354M  events.out.tfevents.1546473718.LAPTOP-8RIB354M
mesh_sampling/: mesh_sampling.cpp
scripts/: convert2ply.sh  helper_project.py  off2numpy.py
src/: don_segmentation.cpp  don_segmentation.h  main.cpp  mesh_sampling.cpp  mesh_sampling.h
